# project-aegis

./: .gitignore  LICENSE  README.md  aegis.py  aegis_cli.py  debug_project.py  install.sh  pyproject.toml
docs/: code_of_conduct.md  ethical_charter.md  usage_guide.md
examples/: basic_usage.py  recon_demo.py
src/aegis/: __init__.py  aegis_cli.py
src/aegis/core/: __init__.py  config.py  framework.py
src/aegis/modules/: __init__.py  base_recon.py
src/aegis/modules/recon/: __init__.py
src/aegis/modules/recon/osint/: __init__.py  osint.py
src/aegis/modules/recon/port_scan/: __init__.py  port_scan.py
src/aegis/modules/recon/subdomain_enum/: __init__.py  subdomain_enum.py
src/aegis/utils/: formatter.py
tests/: __init__.py  test_basic.py  test_framework.py  test_recon.py
